lang/qt/src/qgpgmesignkeyjob.cpp
@@ -57,6 +57,15 @@ using namespace GpgME;
 namespace
 {
 struct TrustSignatureProperties {
+    TrustSignatureProperties() = default;
+    // needed for C++11 because until C++14 "aggregate initialization requires
+    // class type, that has no default member initializers"
+    TrustSignatureProperties(TrustSignatureTrust trust_, unsigned int depth_, const QString &scope_)
+        : trust{trust_}
+        , depth{depth_}
+        , scope{scope_}
+    {}
+
     TrustSignatureTrust trust = TrustSignatureTrust::None;
     unsigned int depth = 0;
     QString scope;
